--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,22 +108,23 @@
 .tab-content{
     margin-top: 15vh;
     padding-top: 15px;
-    overflow-x: hidden;
-    //height: 75vh;
+    overflow: hidden;
+ 
 }
 .tab-content-in{
     width: 100%;
     position: relative;
+    
 }
 .tab-content-in > div{
     width: 100%;
-    border: solid red 1px;
+    
 }
 .tab-content-in > div:not(.tab-content-active){
     position: absolute;
     overflow: hidden;
     top: 0;
-    height: 100%;
+    
 
 
 }
