--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -55,7 +55,6 @@
 
 .menu-top{
     position: fixed;
-    height: 15vh;
     background-color: blue;
     left: 15px;
     width: 100%;
@@ -63,34 +62,44 @@
     color: white;
 }
 
-.menu-top > div:nth-child(1){
-    height: 50%;
-    font-size: 1.5em;
+.menu-top > div{
+    width: 100%;
 
 }
-.menu-top > div:nth-child(1) > *{
+.menu-top > div:nth-child(1){
+    overflow: hidden;
+    background-color: blue;
+}
+.menu-top > div:nth-child(2){
+
+}
+.menu-top > div:nth-child(1) > *:not(:last-child){
     float: left;
+    margin-right: 15px;
+}
+
+.menu-top .option{
+    float: right;
+}
+.menu-top .bt-toggle,.menu-top .option{
+    font-size: 1.4em;
 }
 .menu-top > div:nth-child(1) > div:nth-child(1){
-    margin-right: .5em;
-
     cursor: pointer;
 }
 
 .tab-menu{
-    height: 50%;
+    margin-top: 15px;
 }
 .tab-menu ul{
-    height: 100%;
-    display: flex;
     margin: 0;
     padding: 0;
-
+    display: flex;
 }
 .tab-menu li{
-    /*    display: inline-block;
-        position: relative;*/
-
+    //display: inline-block;
+    flex: 1;
+    list-style: none;
 }
 .tab-menu li a:visited, .tab-menu li a:link{
     color: white;
@@ -102,7 +111,7 @@
 }
 
 .tab-menu-active{
-    border-bottom: solid orange .5em;
+    border-bottom: solid orange .3em;
 }
 
 .tab-content{
@@ -110,22 +119,22 @@
     padding-top: 15px;
     min-height: 70vh;
     overflow: hidden;
- 
+
 }
 .tab-content-in{
     width: 100%;
     position: relative;
-    
+
 }
 .tab-content-in > div{
     width: 100%;
-    
+
 }
 .tab-content-in > div:not(.tab-content-active){
     position: absolute;
     overflow: hidden;
     top: 0;
-    
+
 
 
 }
@@ -177,11 +186,11 @@
 
 #map{
     width: 100%;
-    height: 300px;
+
 }
 
 .rn-carousel{
-    height: 450px;
+    height: 400px;
     position: relative;
 }
 .rn-carousel-indicator{
@@ -269,6 +278,10 @@
         list-style: none;
         text-align: center;
     }
+
+    #map{
+        height: 300px;
+    }
 }
 @media screen and (max-width: 600px){
     .menu{
@@ -282,4 +295,18 @@
         list-style: none;
         text-align: center;
     }
+    #map{
+        height: 200px;
+    }
 }
+
+/*@media screen and (orientation:portrait) {
+    #map{
+        border: solid red 1px;
+    }
+}
+@media screen and (orientation:landscape) {
+   #map{
+        border: solid blue 1px;
+    }
+}*/
