--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -264,6 +264,87 @@
     width: 30px;
 }
 
+.table-semanal tr{
+    cursor: pointer;
+}
+
+.modal-show{
+    overflow: hidden;
+}
+.modal-default{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,.7);
+    z-index: 20;
+}
+.modal-body-head > *:not(span){
+
+    width: 80%;
+    margin: 0 auto;
+}
+.modal-body-head > div{
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.modal-body-head{
+    position: relative;
+
+}
+.modal-body-head > .glyphicon{
+    position: absolute;
+    top: 50%;
+    cursor: pointer;
+    font-size: 1.5em;
+}
+.modal-body-head > .glyphicon:nth-child(1){
+    left: 0;
+
+}
+.modal-body-head > .glyphicon:nth-child(2){
+    right: 0;
+
+}
+.modal-body{
+    overflow-y: auto;    
+}
+.table-dia tr:nth-child(1){
+    font-size: 20px;
+}
+.table-dia tr:nth-child(1) img{
+    width: 20px;
+}
+.table-dia tr td{
+    text-align: center;
+}
+.modal-semanal > div{
+    background-color: white;
+    height: 90%;
+
+}
+.modal-semanal .modal-head{
+    //height: 10%;
+    background-color: blue;
+    font-size: 1.5em;
+    color: white;
+
+}
+.modal-semanal .modal-head > *{
+    display: inline-block;
+    margin-right: 15px;
+}
+.modal-semanal .modal-body{
+    height: 75%;
+    background-color: rgb(230,230,230);
+}
+
+.modal-semanal .modal-foot{
+    height: 90px;
+
+}
 
 @media screen and (min-width: 601px){
     .menu{
