--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,6 +62,7 @@ body{
     width: 100%;
     z-index: 1;
     color: white;
+    height: 70px;
 }
 
 .menu-top > div{
@@ -71,13 +72,15 @@ body{
 .menu-top > div:nth-child(1){
     overflow: hidden;
     background-color: blue;
+    height: 50%;
 }
-.menu-top > div:nth-child(2) li{
 
-}
 .menu-top > div:nth-child(1) > *:not(:last-child){
     float: left;
     margin-right: 15px;
+}
+.menu-top > div:nth-child(2){
+    height: 50%;
 }
 
 .menu-top .option{
@@ -91,24 +94,30 @@ body{
 }
 
 .tab-menu{
-    margin-top: 15px;
+
 }
 .tab-menu ul{
     margin: 0;
     padding: 0;
     display: flex;
+    height: 100%;
 }
 .tab-menu li{
-    //display: inline-block;
+    display: flex;
     flex: 1;
+    align-content: center;
+    justify-content: center;
     list-style: none;
     text-align: center;
-    
+
+
+}
+.tab-menu li a{
+    align-self: center;
 }
 .tab-menu li a:visited, .tab-menu li a:link{
     color: white;
     text-decoration: none;
-
     padding: 0 1em; 
 
 
@@ -119,7 +128,7 @@ body{
 }
 
 .tab-content{
-    margin-top: 15vh;
+    margin-top: 70px;
     padding-top: 15px;
     min-height: 70vh;
     overflow: hidden;
@@ -271,8 +280,20 @@ body{
 .table-semanal tr{
     cursor: pointer;
 }
-.table-porHora tr td{
 
+.table-semanal tr td:not(:nth-child(3)){
+    text-align: center;
+}
+
+.table-semanal tr td img, .table-porHora tr td img{
+    width: 20px;
+}
+.table-semanal tr td, .table-porHora tr td{
+    padding: 5px;
+
+}
+.table-porHora tr td:not(:nth-child(3)){
+    text-align: center;
 }
 
 .modal-show{
@@ -389,7 +410,7 @@ body{
         flex: 1;
         list-style: none;
         text-align: center;
-        font-size: .6em;
+        font-size: .8em;
     }
     #map{
         height: 200px;
