--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -62,7 +62,7 @@ body{
     width: 100%;
     z-index: 1;
     color: white;
-    height: 70px;
+    height: 90px;
 }
 
 .menu-top > div{
@@ -70,14 +70,18 @@ body{
 
 }
 .menu-top > div:nth-child(1){
-    overflow: hidden;
+
     background-color: blue;
     height: 50%;
 }
 
+.menu-top > div:nth-child(1) > *{
+    padding-top: 15px;
+}
 .menu-top > div:nth-child(1) > *:not(:last-child){
     float: left;
     margin-right: 15px;
+
 }
 .menu-top > div:nth-child(2){
     height: 50%;
@@ -128,7 +132,7 @@ body{
 }
 
 .tab-content{
-    margin-top: 70px;
+    margin-top: 90px;
     padding-top: 15px;
     min-height: 70vh;
     overflow: hidden;
@@ -141,13 +145,13 @@ body{
 }
 .tab-content-in > div{
     width: 100%;
-    
+
 }
 .tab-content-in > div:not(.tab-content-active){
     position: absolute;
-    overflow: hidden;
+    raoverflow: hidden;
     top: 0;
-    
+
 
 
 
@@ -239,7 +243,8 @@ body{
 
 }
 .rodape{
-    height: 15vh;
+    //height: 15vh;
+    //border: solid red 1px;
     overflow: hidden;
 }
 
@@ -297,51 +302,10 @@ body{
     text-align: center;
 }
 
-.modal-show{
-    overflow: hidden;
-}
 
-.modal-default{
-    transition: linear all .5s;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,.7);
-    z-index: 20;
-}
-.modal-body-head > *:not(span){
 
-    width: 80%;
-    margin: 0 auto;
-}
-.modal-body-head > div{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-}
-.modal-body-head{
-    position: relative;
 
-}
-.modal-body-head > .glyphicon{
-    position: absolute;
-    top: 50%;
-    cursor: pointer;
-    font-size: 1.5em;
-}
-.modal-body-head > .glyphicon:nth-child(1){
-    left: 0;
 
-}
-.modal-body-head > .glyphicon:nth-child(2){
-    right: 0;
-
-}
-.modal-body{
-    overflow-y: auto;    
-}
 .table-dia tr:nth-child(1){
     font-size: 20px;
 }
@@ -350,35 +314,6 @@ body{
 }
 .table-dia tr td{
     text-align: center;
-}
-.modal-default > div{
-    background-color: white;
-    height: 100%;
-
-}
-.modal-default .modal-head{
-    //height: 10%;
-    background-color: blue;
-    font-size: 1.5em;
-    color: white;
-
-}
-.modal-default .modal-head > *{
-    display: inline-block;
-    margin-right: 15px;
-}
-.modal-default .modal-head > *:nth-child(1){
-    cursor: pointer;
-
-}
-.modal-default .modal-body{
-    height: 85%;
-    background-color: rgb(230,230,230);
-}
-
-.modal-semanal .modal-foot{
-    height: 90px;
-
 }
 
 @media screen and (min-width: 601px){
@@ -428,3 +363,93 @@ body{
         border: solid blue 1px;
     }
 }*/
+
+.modal-show{
+    overflow: hidden;
+}
+
+.modal-default{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(230,230,230);
+    z-index: 25;    
+    top: 0;
+    left: 0;
+    //overflow-y: auto; 
+}
+
+.modal-default .modal-head{
+    height: 35px;
+    width: 100%;
+    position: fixed;
+    z-index: 40;
+    padding: 0 15px;
+
+}
+.modal-default .modal-body-head{
+    height: 90px;
+    width: 100%;
+    z-index: 40;
+    left: 0;
+    top: 0;
+    margin: 35px 0px 0px 0px;
+    padding: 0;
+    position: fixed;
+    background-color: rgb(230,230,230);
+    padding: 0 15px;
+}
+.modal-default .modal-body-content{
+    margin-top: 125px;  
+
+}
+.modal-default .modal-body{
+    overflow-y: auto;
+    height: 80vh;
+}
+.modal-foot{
+
+}
+.modal-head {
+    background-color: blue;
+    color: white;
+}
+.modal-head > *{
+    float: left;
+    margin-right: 15px;
+    font-size: 1.5em;
+
+}
+.modal-head > *:first-child{
+    cursor: pointer;
+}
+
+
+.modal-body-head{
+    position: relative;
+
+}
+.modal-body-head > div{
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+}
+.modal-body-head > div img{
+    width: 45px;
+    height: 45px;
+}
+
+.modal-body-head > span{
+
+    position: absolute;
+    top: 47%;
+    font-size: 2em;
+    cursor: pointer;
+
+}
+.modal-body-head > span:nth-child(1){
+    left: 15px;
+}
+.modal-body-head > span:nth-child(2){
+    right: 15px;
+}
