--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,37 @@
+.splash {
+    overflow: hidden;
+}
+
+
+.splash #splash > div{
+    height: 100%;
+    border: solid blue 1px;
+    
+
+}
+.splash #splash > div img{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    left: 0;
+    right: 0;
+    margin: auto auto;
+}
+.splash #splash{
+    height: 0;
+    overflow: hidden;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+}
+
+
 .menu{
     position: fixed;
     height: 100%;
@@ -33,6 +67,13 @@
 .menu-show .menu{
     left: 0;
 }
+
+.busca-praias{
+    height: 100px;
+    overflow-y: auto;
+    font-size: 1.5em;
+}
+
 body{
     position: relative;
 }
