--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -221,10 +221,10 @@ body{
 }
 
 .tab-content{
-    margin-top: 20vh;
+
     overflow-y:hidden;
     overflow-x:hidden;
-    min-height: 60vh;
+
     border: solid red 0px;
 }
 .tab-content-in{
@@ -331,18 +331,19 @@ body{
 
 }
 .rodape{
-    height: 20vh;
     overflow: hidden;
     border: solid blue 0px;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 .rodape > div{
-    border: solid blue 0px;
+    border: solid red 0px;
     width: 100%;
-    height: 100%;
+    height: 90%;
     overflow: hidden;
+
 }
 
 
@@ -413,42 +414,7 @@ body{
     text-align: center;
 }
 
-@media screen and (min-width: 601px){
-    .menu{
-        width: 40%;
-    }
-    .menu-hide .menu{
-        left: -40%;
-    }
 
-    .tab-menu li{
-        display: inline-block;
-        tab-menu       list-style: none;
-        text-align: center;
-        font-size: 1em;
-    }
-
-    #map{
-        height: 300px;
-    }
-}
-@media screen and (max-width: 600px){
-    .menu{
-        width: 85%;
-    }
-    .menu-hide .menu{
-        left: -85%;
-    }
-    .tab-menu li{
-        flex: 1;
-        list-style: none;
-        text-align: center;
-        font-size: .8em;
-    }
-    #map{
-        height: 200px;
-    }
-}
 
 /*@media screen and (orientation:portrait) {
     #map{
@@ -483,9 +449,10 @@ body{
     z-index: 40;
     padding: 0 15px;
 
+
 }
 .modal-default .modal-body-head{
-    height: 30vh;
+
     width: 100%;
     z-index: 40;
     left: 0;
@@ -500,21 +467,17 @@ body{
 }
 .modal-default .modal-body{
     overflow-y: auto;
-    margin-top: 40vh;
-    height: 40vh;
     border: solid red 0px;
 }
 .modal-foot{
-
-    height: 20vh;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    border: solid 0px red;
 }
 .modal-foot > div{
     width: 100%;
-    height: 100%;
+    height: 90%;
     border: solid 0px blue;
     overflow: hidden;
 }
@@ -568,3 +531,84 @@ body{
     right: 15px;
 }
 
+
+@media screen and (min-width: 601px){
+    .menu{
+        width: 40%;
+    }
+    .menu-hide .menu{
+        left: -40%;
+    }
+
+    .tab-menu li{
+        display: inline-block;
+        list-style: none;
+        text-align: center;
+        font-size: 1em;
+    }
+
+    #map{
+        height: 300px;
+    }
+}
+@media screen and (max-width: 600px){
+    .menu{
+        width: 85%;
+    }
+    .menu-hide .menu{
+        left: -85%;
+    }
+    .tab-menu li{
+        flex: 1;
+        list-style: none;
+        text-align: center;
+        font-size: .8em;
+    }
+    #map{
+        height: 200px;
+    }
+}
+
+@media screen and (orientation:portrait){
+    .modal-default .modal-body-head{
+        height: 18vh;
+    }
+    .modal-default .modal-body{
+        margin-top:  28vh;
+        height: 57vh;
+    }
+
+    .modal-foot{
+        height: 15vh;
+    }
+
+    .tab-content{
+        margin-top: 20vh;
+        min-height: 65vh;
+    }
+    .rodape{
+        height: 15vh;
+        border: solid red 0px;
+    }
+}
+@media screen and (orientation:landscape){
+    .modal-default .modal-body-head{
+        height: 30vh;
+    }
+    .modal-default .modal-body{
+        margin-top: 40vh;
+        height: 40vh;
+    }
+
+    .modal-foot{
+        height: 20vh;
+    }
+
+    .tab-content{
+        margin-top: 20vh;
+        min-height: 60vh;
+    }
+    .rodape{
+        height: 20vh;
+    }
+}
