--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -73,7 +73,7 @@
     height: 100%;
     background-color: white;
     z-index: 10;
-    
+
 }
 .menu-animate{
     transition: all linear .5s;
@@ -338,16 +338,18 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    
-}
-.rodape > div{
 
+}
+
+.rodape > div{
+    border: solid red 0px;
     width: 100%;
-    height: 100%;
     overflow: hidden;
 
 }
-
+.rodape > div >*{
+    
+}
 
 .compass{
     display: flex;
@@ -475,13 +477,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    border: solid 0px red;
+    border: solid 1px red;
 }
 .modal-foot > div{
     width: 100%;
     height: 100%;
-    border: solid 0px blue;
-    overflow: hidden;
+    border: solid 1px blue;
+    
 }
 .modal-head {
     background-color: #3366FF;
