--- a/site/css/style.css
+++ b/site/css/style.css
@@ -605,7 +605,7 @@ a.totop-link {
    ========================================================================== */
 
 .about {
-	background: url(../images/about_nanndoj.jpg)no-repeat 100% 0 scroll;
+	background: url(../images/about.jpg)no-repeat 100% 0 scroll;
 	background-size: contain;
 }
 .about .inner {
